syntax = "proto3";

package chain_prover;

service ChainProver {
    rpc Config (ConfigRequest) returns (ConfigResponse);
    rpc Chain (ChainRequest) returns (ChainResponse);
}

message ConfigRequest {}

message ConfigResponse {
  bytes config_response_data = 1;
}

message ChainRequest {
  bytes chain_request_data = 1;
}

message ChainResponse {
  bytes chain_response_data = 1;
}

